--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -7,18 +7,19 @@
 }
 
 .card {
-  background:var(--white);
+  background: var(--white);
   width: 100%;
-  height:650px;
-  max-width: 569px; 
+  height: auto;
+  max-width: 569px;
+  margin: 1rem;
   padding: 20px 24px;
   border-radius: 16px;
-  box-shadow: 0 2px 6px var(--shadow);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   border: 1px solid var(--brown-80);
 }
 
-
-.title, .subtitle {
+.title,
+.subtitle {
   margin: 0;
 }
 
@@ -71,40 +72,42 @@
 }
 
 .error {
-  color:var(--red);
+  color: var(--red-point);
   font-size: 14px;
   margin-top: 8px;
 }
 
 .registerText {
   text-align: center;
-  color:var(--brown-60);
+  color: var(--brown-60);
   margin-top: 48px;
   font-size: 15px;
 }
 
 .registerLink {
-  color: var(--pink-main-80);
+  color: var(--pink-main-100);
   font-weight: 400;
   cursor: pointer;
 }
+
 .registerLink:hover {
-  color: var(--pink-main-100);
+  text-decoration: underline;
 }
+
 .noticeBox {
   margin-top: 48px;
   margin-bottom: 4px;
-  background: var(--yellow-80);
-  border: 1px solid var(--yellow-100);
+  background: #fefce8;
+  border: 1px solid #fef08a;
   padding: 16px 15px;
   border-radius: 8px;
   font-size: 16px;
-  color: var(--brown-60);
+  color: #744137;
 }
 
 .noticeBox ul {
   margin-left: 15px;
   list-style-type: disc;
-  color: var(--brown-60);
+  color: #744137;
   font-size: 12px;
 }
